syntax = "proto3";
package mods.v1;

import "types/v1/mod.proto";
import "types/v1/team.proto";
import "types/v1/user.proto";

service ModsService {
  rpc List(ListRequest) returns (ListResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Show(ShowRequest) returns (ShowResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc AttachUser(AttachUserRequest) returns (AttachUserResponse);
  rpc DropUser(DropUserRequest) returns (DropUserResponse);

  rpc ListTeams(ListTeamsRequest) returns (ListTeamsResponse);
  rpc AttachTeam(AttachTeamRequest) returns (AttachTeamResponse);
  rpc DropTeam(DropTeamRequest) returns (DropTeamResponse);
}

message ListRequest {
  string query = 1;
}

message ListResponse {
  repeated types.v1.Mod mods = 1;
}

message CreateRequest {
  CreateMod mod = 1;
}

message CreateMod {
  optional string slug = 1;
  string name = 2;
  optional string side = 3;
  optional string description = 4;
  optional string author = 5;
  optional string website = 6;
  optional string donate = 7;
}

message CreateResponse {
  types.v1.Mod mod = 1;
}

message UpdateRequest {
  string id = 1;
  UpdateMod mod = 2;
}

message UpdateMod {
  optional string slug = 1;
  optional string name = 2;
  optional string side = 3;
  optional string description = 4;
  optional string author = 5;
  optional string website = 6;
  optional string donate = 7;
}

message UpdateResponse {
  types.v1.Mod mod = 1;
}

message ShowRequest {
  string id = 1;
}

message ShowResponse {
  types.v1.Mod mod = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string message = 1;
}

message ListUsersRequest {
  string mod = 1;
  string query = 2;
}

message ListUsersResponse {
  repeated types.v1.User users = 1;
}

message AttachUserRequest {
  string mod = 1;
  string user = 2;
}

message AttachUserResponse {
  string message = 1;
}

message DropUserRequest {
  string mod = 1;
  string user = 2;
}

message DropUserResponse {
  string message = 1;
}

message ListTeamsRequest {
  string mod = 1;
  string query = 2;
}

message ListTeamsResponse {
  repeated types.v1.Team teams = 1;
}

message AttachTeamRequest {
  string mod = 1;
  string team = 2;
}

message AttachTeamResponse {
  string message = 1;
}

message DropTeamRequest {
  string mod = 1;
  string team = 2;
}

message DropTeamResponse {
  string message = 1;
}
